code/kubernetes/apps/kapend/db.yaml
# Déploiement de MySQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql-db
        image: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: mysql-config-volume
          mountPath: /etc/mysql/conf.d/
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-config-volume
        configMap:
          name: mysql-config
---

# Service MySQL
apiVersion: v1
kind: Service
metadata:
  name: mysqlserver
spec:
  type: NodePort
  selector:
    app: mysql-db
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30036
