code/kubernetes/apps/kapend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kapend-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kapend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kapend-app-service
            port:
              number: 80
